--- a/index.html
+++ b/index.html
@@ -85,40 +85,39 @@
       </ul>
 
     </section>
-
     <section class="container human-rationale">
-    <h2 class="section-title">A Sustainable Future for Karachi: The Full Story</h2>
+    <h2 class="rationale-title">A Sustainable Future for Karachi: The Full Story</h2>
     
-    <div class="info-block">
+    <div class="glass-text-card">
         <h3>The Hidden Cost of Our Power Backup</h3>
         <p>
-            In Karachi, the hum of a diesel generator is a sound we all know too well. While these machines provide us with electricity during frequent power cuts, we often overlook the invisible price we pay. When diesel burns, it undergoes a chemical reaction that releases carbon dioxide (CO2)—the primary gas responsible for trapping heat in our atmosphere. For every single liter of diesel consumed, nearly 2.7 kilograms of this gas is pumped into our local air. 
+            In Karachi, the hum of a diesel generator is a sound we all know too well. While these machines provide us with electricity during frequent power cuts, we often overlook the invisible price we pay. When diesel burns, it releases carbon dioxide (CO₂)—the primary gas responsible for trapping heat in our atmosphere. For every single liter of diesel consumed, nearly 2.7 kilograms of this gas is pumped into our local air. 
         </p>
         <p>
-            But it isn't just about global warming. These generators also release "particulate matter"—tiny soot particles that we can smell and see as black smoke. In a crowded city like ours, these particles get trapped between buildings, making the air heavy and harmful to breathe, especially for children. By calculating exactly how much fuel we use, we can finally see the true environmental footprint of our need for a "backup" power source.
+            But it isn't just about global warming. These generators also release "particulate matter"—tiny soot particles that we can smell and see as black smoke. In a crowded city like ours, these particles get trapped between buildings, making the air heavy and harmful to breathe, especially for children.
         </p>
     </div>
 
-    <div class="info-block">
+    <div class="glass-text-card">
         <h3>Turning Karachi’s Heat into Help</h3>
         <p>
             We often complain about the intense Karachi sun, but it is actually our greatest untapped resource. Our city receives some of the highest levels of solar energy in the world, averaging over five hours of "peak" sunlight almost every day of the year. Instead of letting that heat just warm up our rooftops, we can capture it using Solar Photovoltaic (PV) panels. 
         </p>
         <p>
-            This project explores a "Hybrid" approach—meaning we don't have to get rid of generators entirely, but we can let the sun do the heavy lifting during the day. By using solar power when the sun is at its brightest (between 10 AM and 4 PM), we can drastically reduce the number of hours our generators need to run. This doesn't just cut down on pollution; it creates a massive "economic shield" for families and businesses against the ever-rising prices of fuel in Pakistan.
+            This project explores a "Hybrid" approach—letting the sun do the heavy lifting during the day. By using solar power when the sun is at its brightest, we can drastically reduce the number of hours our generators need to run. This doesn't just cut down on pollution; it creates a massive economic shield against the ever-rising prices of fuel in Pakistan.
         </p>
     </div>
 
-    <div class="info-block">
+    <div class="glass-text-card">
         <h3>Nature’s Own Air Purifiers</h3>
         <p>
-            No matter how much solar energy we use, some pollution will always remain. This is where our "Urban Green" strategy comes in. Nature has provided us with incredible tools like the <strong>Neem</strong> and <strong>Peepal</strong> trees, which are perfectly suited for Karachi’s dry and salty environment. These trees act like natural vacuum cleaners; they breathe in the CO2 that our machines breathe out, storing the carbon in their wood and releasing fresh oxygen back to us.
+            Nature has provided us with incredible tools like the <strong>Neem</strong> and <strong>Peepal</strong> trees, which are perfectly suited for Karachi’s dry and salty environment. These trees act like natural vacuum cleaners; they breathe in the CO₂ that our machines breathe out, storing the carbon and releasing fresh oxygen back to us.
         </p>
         <p>
-            Beyond cleaning the air, these trees solve another major Karachi problem: the "Urban Heat Island" effect. Concrete and asphalt soak up heat during the day, making our city much hotter than the countryside. A well-placed canopy of native trees can lower the temperature of a street by several degrees through shade and moisture. By matching the number of trees planted to the amount of diesel burned, we can create a "Net-Zero" balance—where we give back to nature as much as we take.
+            Beyond cleaning the air, these trees solve the "Urban Heat Island" effect. Concrete and asphalt soak up heat during the day, making our city much hotter than the countryside. A well-placed canopy of native trees can lower the temperature of a street by several degrees through shade and moisture.
         </p>
     </div>
-</section>
+    </section>
 
   </main>
 
