--- a/index.html
+++ b/index.html
@@ -118,6 +118,22 @@
             Beyond cleaning the air, these trees solve the "Urban Heat Island" effect. Concrete and asphalt soak up heat during the day, making our city much hotter than the countryside. A well-placed canopy of native trees can lower the temperature of a street by several degrees through shade and moisture.
         </p>
         </div>
+        <div class="glass-card tree-container">
+          <div class="tree">
+            <div class="canopy">
+              <div class="leaf"></div>
+              <div class="leaf"></div>
+              <div class="leaf"></div>
+              <div class="leaf"></div>
+              <div class="leaf"></div>
+        </div>
+        <div class="trunk"></div>
+    </div>
+    <div class="tree-text">
+          <h3>Live Mitigation</h3>
+          <p>This animated Neem tree represents the carbon sequestration happening in real-time as we plant more green cover in Karachi.</p>
+    </div>         
+</div>
     </div>
 </section>
 
