--- a/index.html
+++ b/index.html
@@ -66,25 +66,18 @@
 
     </section>
 
-
-
-    <section class="container intro">
-
-      <h3>Project Overview</h3>
-
-      <p>This website presents a step-by-step calculator to estimate diesel fuel consumption, CO₂ emissions and savings from solar. It also includes local literature-based recommendations for tree species to mitigate remaining emissions in Karachi.</p>
-
-      <ul class="features">
-
-        <li><strong>Calculator:</strong> 3-step interactive tool.</li>
-
-        <li><strong>Carbon Theory:</strong> Simple equations and sources.</li>
-
-        <li><strong>Trees:</strong> Species and sequestration tables drawn from local studies.</li>
-
-      </ul>
-
-    </section>
+<section class="container intro">
+  <div class="leaf-container"> <h3>Project Overview</h3>
+    <p>This website presents a step-by-step calculator...</p>
+    <ul class="features">
+      <li><strong>Calculator:</strong> 3-step interactive tool.</li>
+      <li><strong>Carbon Theory:</strong> Simple equations and sources.</li>
+      <li><strong>Trees:</strong> Species and sequestration tables.</li>
+    </ul>
+    
+    <img src="leaves.png" class="floating-leaves" alt="Decorative leaves">
+  </div>
+</section>
 
 <main>
     <section class="rationale-section diesel-bg">
