--- a/calculator.html
+++ b/calculator.html
@@ -32,6 +32,12 @@
         <label>Fuel efficiency (L/hour) <input id="fuelEff" type="number" value="2.2" step="0.01"></label>
         <label>Diesel Price (PKR/L) <input id="dieselPrice" type="number" value="285"></label>
         <label>CO₂ Factor (kg/L) <input id="co2Factor" type="number" value="2.68" step="0.01"></label>
+
+        <div class="generator-container">
+          <img src="smoke.png" class="smoke back-smoke" alt="smoke">
+          <img src="generator.png" class="generator-img" alt="Diesel Generator">
+          <img src="smoke.png" class="smoke front-smoke" alt="smoke">
+        </div>
         <div class="actions"><button onclick="goToStep2()">Next →</button></div>
       </div>
 
@@ -76,3 +82,4 @@
 </body>
 
 </html>
+
