--- a/calculator.html
+++ b/calculator.html
@@ -47,6 +47,13 @@
         <label>Average sun hours/day <input id="sunHours" type="number" value="5.5" step="0.1"></label>
         <label>Installation cost (PKR) <input id="installCost" type="number" value="1500000"></label>
         <label>Annual maintenance (PKR) <input id="maintCost" type="number" value="20000"></label>
+        
+        <div class="solar-container">
+            <img src="[CITYPNG.COM]Yellow Ray Light PNG - 1000x1000.png" class="sun-rays" alt="rays">
+            <img src="sunlight-drawing-clip-art-sun-f92cec4051ba3db28e3b9d74d3c58c8c.jpg" class="sun-img" alt="sun">
+            <img src="vecteezy_highefficiency-solar-panel-array-for-energy-generation_58263593.jpg" class="solar-panel-img" alt="Solar Panel">
+        </div>
+        
         <div class="actions">
           <button onclick="goToStep1()">← Back</button>
           <button onclick="goToStep3()">Next →</button>
@@ -82,4 +89,5 @@
 </body>
 
 </html>
+
 
