--- a/calculator.html
+++ b/calculator.html
@@ -49,9 +49,9 @@
         <label>Annual maintenance (PKR) <input id="maintCost" type="number" value="20000"></label>
         
         <div class="solar-container">
-            <img src="[CITYPNG.COM]Yellow Ray Light PNG - 1000x1000.png" class="sun-rays" alt="rays">
-            <img src="sunlight-drawing-clip-art-sun-f92cec4051ba3db28e3b9d74d3c58c8c.jpg" class="sun-img" alt="sun">
-            <img src="vecteezy_highefficiency-solar-panel-array-for-energy-generation_58263593.jpg" class="solar-panel-img" alt="Solar Panel">
+            <img src="rays.png" class="sun-rays" alt="rays">
+            <img src="sun.png" class="sun-img" alt="sun">
+            <img src="solar-panel.png" class="solar-panel-img" alt="Solar Panel">
         </div>
         
         <div class="actions">
@@ -89,5 +89,6 @@
 </body>
 
 </html>
+
 
 
