--- a/index.html
+++ b/index.html
@@ -1,43 +1,42 @@
 <!doctype html>
-
 <html lang="en">
-
 <head>
-
   <meta charset="utf-8">
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <title>Sustainable Energy and Urban Green Mitigation</title>
-
+  <title>Home - Sustainable Energy and Urban Green Mitigation</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="stylesheet" href="styles.css">
-
 </head>
 
 <body class="theme-green">
-
   <header class="site-header">
-
     <div class="container">
+      <div class="brand-title">
+        <h1>Sustainable Energy & Urban Green Mitigation</h1>
+        <p>Developed by Engr. Azhan Ahmed</p>
+      </div>
 
-      <h1 class="logo">Sustainable Energy and Urban Green Mitigation</h1>
-
-      <nav class="nav">
-
-        <a href="index.html" class="active">Home</a>
-
-        <a href="calculator.html">Calculator</a>
-
-        <a href="theory.html">Carbon Theory</a>
-
-        <a href="trees.html">Urban Trees</a>
-
-        <a href="about.html">About</a>
-
+      <nav class="cool-nav">
+        <a href="index.html" class="nav-item active">
+          <div class="active-circle">
+            <i class="fa-solid fa-house"></i>
+          </div>
+          <span>Home</span>
+        </a>
+        <a href="calculator.html" class="nav-item">
+          <i class="fa-solid fa-calculator"></i>
+          <span>Calculator</span>
+        </a>
+        <a href="theory.html" class="nav-item">
+          <i class="fa-solid fa-book"></i>
+          <span>Theory</span>
+        </a>
+        <a href="about.html" class="nav-item">
+          <i class="fa-solid fa-user"></i>
+          <span>About</span>
+        </a>
       </nav>
-
     </div>
-
   </header>
 
 
