--- a/about.html
+++ b/about.html
@@ -4,18 +4,46 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About - Sustainable Energy and Urban Green Mitigation</title>
+  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="stylesheet" href="styles.css">
 </head>
+
 <body class="theme-green">
   <header class="site-header">
     <div class="container">
-      <h1 class="logo small">Sustainable Energy and Urban Green Mitigation</h1>
-      <nav class="nav">
-        <a href="index.html">Home</a>
-        <a href="calculator.html">Calculator</a>
-        <a href="theory.html">Carbon Theory</a>
-        <a href="trees.html">Urban Trees</a>
-        <a href="about.html" class="active">About</a>
+      <div class="brand-title">
+        <h1>Sustainable Energy & Urban Green Mitigation</h1>
+        <p>Developed by Engr. Azhan Ahmed</p>
+      </div>
+
+      <nav class="cool-nav">
+        <a href="index.html" class="nav-item">
+          <i class="fa-solid fa-house"></i>
+          <span>Home</span>
+        </a>
+
+        <a href="calculator.html" class="nav-item">
+          <i class="fa-solid fa-calculator"></i>
+          <span>Calculator</span>
+        </a>
+
+        <a href="theory.html" class="nav-item">
+          <i class="fa-solid fa-book"></i>
+          <span>Theory</span>
+        </a>
+
+        <a href="trees.html" class="nav-item">
+          <i class="fa-solid fa-tree"></i>
+          <span>Trees</span>
+        </a>
+
+        <a href="about.html" class="nav-item active">
+          <div class="active-circle">
+            <i class="fa-solid fa-user"></i>
+          </div>
+          <span>About</span>
+        </a>
       </nav>
     </div>
   </header>
