--- a/index.html
+++ b/index.html
@@ -117,6 +117,24 @@
     </section>
 </main>
 
+    <section id="reviews-section" style="background-color: #1b4332; padding: 60px 20px; border-top: 2px solid #2d6a4f;">
+        <div class="container" style="max-width: 1000px; margin: 0 auto;">
+            <div style="text-align: center; margin-bottom: 30px;">
+                <h2 style="color: #ffffff; font-size: 2rem; text-transform: uppercase;">Community Feedback</h2>
+                <p style="color: #ffffff; opacity: 0.9;">Have a question or want to leave a review for Engr. Azhan Ahmed?</p>
+            </div>
+
+            <script src="https://elfsightcdn.com/platform.js" async></script>
+            <div class="elfsight-app-93c93e9f-ccbf-4843-89a0-4feb97611e54" data-elfsight-app-lazy></div>
+            </div>
+    </section>
+
+    <footer class="site-footer">
+        <div class="container">
+            <p>Department of Civil Engineering • NED University • Project by Group (Azhan Ahmed & team)</p>
+        </div>
+    </footer>
+
 
   <footer class="site-footer">
 
