--- a/index.html
+++ b/index.html
@@ -117,25 +117,19 @@
     </section>
 </main>
 
-    <section id="reviews-section" style="background-color: #1b4332; padding: 60px 20px; border-top: 2px solid #2d6a4f;">
-        <div class="container" style="max-width: 1000px; margin: 0 auto;">
-            <div style="text-align: center; margin-bottom: 30px;">
-                <h2 style="color: #ffffff; font-size: 2rem; text-transform: uppercase;">Community Feedback</h2>
-                <p style="color: #ffffff; opacity: 0.9;">Have a question or want to leave a review for Engr. Azhan Ahmed?</p>
-            </div>
+    <section id="community-feedback" style="background-color: #1b4332; padding: 60px 20px; border-top: 3px solid #2d6a4f;">
+  <div class="container" style="max-width: 1100px; margin: 0 auto;">
+    
+    <div style="text-align: center; margin-bottom: 40px;">
+      <h2 style="color: #ffffff; font-size: 2.2rem; text-transform: uppercase; letter-spacing: 1px;">Reviews & Questions</h2>
+      <p style="color: #ffffff; opacity: 0.8; font-size: 1.1rem;">Your feedback helps improve urban green strategies for Karachi.</p>
+    </div>
 
-            <script src="https://elfsightcdn.com/platform.js" async></script>
-            <div class="elfsight-app-93c93e9f-ccbf-4843-89a0-4feb97611e54" data-elfsight-app-lazy></div>
-            </div>
-    </section>
-
-    <footer class="site-footer">
-        <div class="container">
-            <p>Department of Civil Engineering • NED University • Project by Group (Azhan Ahmed & team)</p>
-        </div>
-    </footer>
-
-
+    <script src="https://elfsightcdn.com/platform.js" async></script>
+    <div class="elfsight-app-ee49fda8-4740-4181-8595-9f001401770a" data-elfsight-app-lazy></div>
+    </div>
+</section>
+    
   <footer class="site-footer">
 
     <div class="container">
