--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
 
   <section class="container" style="margin-top: 40px; margin-bottom: 40px;">
   <h3 style="text-align: center; color: var(--accent-green);">Project Discussion & Feedback</h3>
+  <div data-canny style="min-height: 600px; width: 100%;"></div>
   <div data-canny></div>
 </section>
 
