--- a/index.html
+++ b/index.html
@@ -116,25 +116,24 @@
         </div>
     </section>
 </main>
+    <section class="container" style="margin-top: 50px; margin-bottom: 50px;">
+  <div style="background: #ffffff; padding: 30px; border-radius: 12px; border: 1px solid #2ecc71; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+    
+    <h3 style="text-align: center; color: #004d40; margin-bottom: 20px;">Project Feedback & Discussion</h3>
 
-  <section class="container" style="margin-top: 40px; margin-bottom: 40px;">
-  <h3 style="text-align: center; color: var(--accent-green);">Project Discussion & Feedback</h3>
-  <div data-canny style="min-height: 600px; width: 100%;"></div>
-  <div data-canny></div>
+    <div id="cusdis_thread"
+      data-host="https://cusdis.com"
+      data-app-id="43f7867a-ea84-4649-86cd-a51810398e24"
+      data-page-id="home_page_001" 
+      data-page-url="https://vref.github.io/index.html"
+      data-page-title="Sustainable Energy Karachi"
+    ></div>
+    <script async defer src="https://cusdis.com/js/cusdis.es.js"></script>
+
+  </div>
 </section>
 
-<script>
-  (function(i,s,o,g,r,a,m){i['Canny']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://canny.io/sdk.js','Canny');
-
-  Canny('render', {
-    boardToken: '1e08454c-1056-dd68-221d-1eeb039bef31',
-    basePath: null, 
-    theme: 'dark' 
-  });
-</script>
+ 
     
   <footer class="site-footer">
 
