--- a/index.html
+++ b/index.html
@@ -107,6 +107,25 @@
         </div>
     </section>
 
+    <section class="rationale-section diesel-bg">
+        <div class="container">
+            <div class="glass-card">
+                <h3>The Hidden Cost of Our Power Backup</h3>
+                <p>In Karachi, the hum of a diesel generator... nearly 2.7 kilograms of CO₂ is pumped into our local air.</p>
+                <p>These generators release "particulate matter"—tiny soot particles that make the air harmful to breathe.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="rationale-section solar-bg">
+        <div class="container">
+            <div class="glass-card">
+                <h3>Turning Karachi’s Heat into Help</h3>
+                <p>Our city receives over five hours of peak sunlight daily. By capturing this energy, we can "turn off" generators during the day.</p>
+            </div>
+        </div>
+    </section>
+
     <section class="rationale-section tree-bg">
         <div class="container">
             <div class="glass-card">
@@ -115,12 +134,11 @@
             </div>
         </div>
     </section>
-</main>
-    <button id="feedback-trigger" style="position: fixed; bottom: 30px; right: 30px; z-index: 1000; background: #004d40; color: #2ecc71; border: 2px solid #2ecc71; width: 60px; height: 60px; border-radius: 15px; cursor: pointer; box-shadow: 6px 6px 12px #b8b9be, -6px -6px 12px #ffffff; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; font-size: 20px;">
+</main> <button id="feedback-trigger" style="position: fixed; bottom: 30px; right: 30px; z-index: 2000; background: #004d40; color: #2ecc71; border: 2px solid #2ecc71; width: 60px; height: 60px; border-radius: 15px; cursor: pointer; box-shadow: 6px 6px 12px rgba(0,0,0,0.2); transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; font-size: 20px;">
   <i class="fa-solid fa-star"></i>
 </button>
 
-<div id="feedback-panel" style="position: fixed; top: 0; right: -420px; width: 380px; height: 100%; background: #f0f4f3; z-index: 1001; border-left: 4px solid #2ecc71; box-shadow: -10px 0 30px rgba(0,0,0,0.15); transition: right 0.5s cubic-bezier(0.82, 0.01, 0.77, 0.41); padding: 0; overflow: hidden;">
+<div id="feedback-panel" style="position: fixed; top: 0; right: -420px; width: 380px; height: 100%; background: #f0f4f3; z-index: 2001; border-left: 4px solid #2ecc71; box-shadow: -10px 0 30px rgba(0,0,0,0.2); transition: right 0.5s cubic-bezier(0.82, 0.01, 0.77, 0.41); padding: 0; overflow-y: auto;">
     
     <div style="background: #004d40; padding: 25px; color: white;">
         <button id="close-panel" style="background: none; border: none; font-size: 20px; cursor: pointer; color: #2ecc71; float: right;">CLOSE [X]</button>
@@ -144,42 +162,28 @@
 </div>
 
 <script async defer src="https://cusdis.com/js/cusdis.es.js"></script>
-
 <script>
   const trigger = document.getElementById('feedback-trigger');
   const panel = document.getElementById('feedback-panel');
   const closeBtn = document.getElementById('close-panel');
 
-  // Toggle open
   trigger.onclick = () => {
     panel.style.right = '0';
-    trigger.style.transform = 'scale(0.9) rotate(90deg)';
+    trigger.style.opacity = '0'; // Hides button when panel is open
   };
 
-  // Toggle close
   closeBtn.onclick = () => {
     panel.style.right = '-420px';
-    trigger.style.transform = 'scale(1) rotate(0deg)';
+    trigger.style.opacity = '1'; // Shows button when closed
   };
 </script>
-   
 
- 
-    
-  <footer class="site-footer">
-
+<footer class="site-footer">
     <div class="container">
-
-      <p>Department of Civil Engineering • NED University • Project by Group (Azhan Ahmed & team)</p>
-
+        <p>Department of Civil Engineering • NED University • Project by Group (Azhan Ahmed & team)</p>
     </div>
+</footer>
 
-  </footer>
+  
 
-
-
-  <script src="common.js"></script>
-
-</body>
-
-</html>
+  
