--- a/about.html
+++ b/about.html
@@ -159,7 +159,7 @@
         <div class="team-card">
           <div class="member-image-wrapper">
             <div class="member-number">01</div>
-            <img src="azhan.jpg" alt="Azhan Ahmed" class="member-img">
+            <img src="azhan.jpeg" alt="Azhan Ahmed" class="member-img">
             <div class="arc arc-1"></div>
           </div>
           <h4>Azhan Ahmed</h4>
@@ -170,7 +170,7 @@
         <div class="team-card">
           <div class="member-image-wrapper">
             <div class="member-number">02</div>
-            <img src="hamza.jpg" alt="Muhammad Hamza" class="member-img">
+            <img src="hamza.jpeg" alt="Muhammad Hamza" class="member-img">
             <div class="arc arc-2"></div>
           </div>
           <h4>Muhammad Hamza</h4>
@@ -181,7 +181,7 @@
         <div class="team-card">
           <div class="member-image-wrapper">
             <div class="member-number">03</div>
-            <img src="kumar.jpg" alt="Varindher Kumar" class="member-img">
+            <img src="kumar.jpeg" alt="Varindher Kumar" class="member-img">
             <div class="arc arc-3"></div>
           </div>
           <h4>Varindher Kumar</h4>
