--- a/about.html
+++ b/about.html
@@ -206,7 +206,7 @@
         <div class="member-card">
           <div class="member-image-wrapper">
             <div class="member-number">04</div>
-            <img src="khizer.jpg" alt="Khizer Waseem" class="member-img">
+            <img src="khizer.jpeg" alt="Khizer Waseem" class="member-img">
             <div class="arc arc-4"></div>
           </div>
           <h4>Khizer Waseem</h4>
