--- a/theory.html
+++ b/theory.html
@@ -98,38 +98,42 @@
   <img src="treee.png" class="tree-right" alt="Green Mitigation Tree">
 
   <header class="site-header">
-    <div class="container">
-      <div class="brand-title">
-        <h1 style="color: white;">Sustainable Energy & Urban Green Mitigation</h1>
-        <p style="color: white; opacity: 0.9;">Developed by Engr. Azhan Ahmed</p>
-      </div>
-
-      <nav class="cool-nav">
-        <a href="index.html" class="nav-item">
-          <i class="fa-solid fa-house"></i>
-          <span>Home</span>
-        </a>
-        <a href="calculator.html" class="nav-item">
-          <i class="fa-solid fa-calculator"></i>
-          <span>Calculator</span>
-        </a>
-        <a href="theory.html" class="nav-item active">
-          <div class="active-circle">
-            <i class="fa-solid fa-book"></i>
-          </div>
-          <span>Theory</span>
-        </a>
-        <a href="trees.html" class="nav-item">
-          <i class="fa-solid fa-tree"></i>
-          <span>Trees</span>
-        </a>
-        <a href="about.html" class="nav-item">
-          <i class="fa-solid fa-user"></i>
-          <span>About</span>
-        </a>
-      </nav>
+  <div class="container header-layout">
+    
+    <div class="logo-box">
+      <img src="logo.png" alt="CO2 Logo" class="header-logo">
     </div>
-  </header>
+
+    <div class="brand-title">
+      <h1>Sustainable Energy & Urban Green Mitigation</h1>
+      <p>Developed by Engr. Azhan Ahmed</p>
+    </div>
+
+    <nav class="cool-nav">
+      <a href="index.html" class="nav-item active">
+        <div class="active-circle"><i class="fa-solid fa-house"></i></div>
+        <span>Home</span>
+      </a>
+      <a href="calculator.html" class="nav-item">
+        <i class="fa-solid fa-calculator"></i>
+        <span>Calculator</span>
+      </a>
+      <a href="theory.html" class="nav-item">
+        <i class="fa-solid fa-book"></i>
+        <span>Theory</span>
+      </a>
+      <a href="trees.html" class="nav-item">
+        <i class="fa-solid fa-tree"></i>
+        <span>Trees</span>
+      </a>
+      <a href="about.html" class="nav-item">
+        <i class="fa-solid fa-user"></i>
+        <span>About</span>
+      </a>
+    </nav>
+    
+  </div>
+</header>
 
   <main>
     <section class="container">
@@ -160,7 +164,7 @@
   </main>
 
   <footer class="site-footer">
-    <div class="container">References available in the report document. Prepared for NED University.</div>
+    <div class="container">Department of Civil Engineering-Prepared for NED University NED University of Engineering and Technology</div>
   </footer>
 
   <script src="common.js"></script>
