--- a/theory.html
+++ b/theory.html
@@ -110,16 +110,16 @@
     </div>
 
     <nav class="cool-nav">
-      <a href="index.html" class="nav-item active">
-        <div class="active-circle"><i class="fa-solid fa-house"></i></div>
+      <a href="index.html" class="nav-item">
+        <i class="fa-solid fa-house"></i></div>
         <span>Home</span>
       </a>
       <a href="calculator.html" class="nav-item">
         <i class="fa-solid fa-calculator"></i>
         <span>Calculator</span>
       </a>
-      <a href="theory.html" class="nav-item">
-        <i class="fa-solid fa-book"></i>
+      <a href="theory.html" class="nav-item active">
+        <div class="active-circle"><i class="fa-solid fa-book"></i>
         <span>Theory</span>
       </a>
       <a href="trees.html" class="nav-item">
