--- a/calculator.html
+++ b/calculator.html
@@ -33,7 +33,7 @@
           <span>Theory</span>
         </a>
         <a href="trees.html" class="nav-item">
-          <i class="fa-solid fa-calculator"></i>
+          <i class="fa-solid fa-tree"></i>
           <span>Trees</span>
         </a>
         <a href="about.html" class="nav-item">
@@ -137,6 +137,7 @@
 </body>
 
 </html>
+
 
 
 
