--- a/theory.html
+++ b/theory.html
@@ -81,8 +81,8 @@
       padding: 20px;
     }
 
+    h2, h3 { color: #27ae60; border-bottom: 2px solid #f1f1f1; padding-bottom: 10px; }
     h2, h3 { color: #1A5A44; border-bottom: 2px solid #f1f1f1; padding-bottom: 10px; }
-    <h3 style="margin-top: 45px;">Key Equations</h3>
     li { margin-bottom: 15px; line-height: 1.6; }
     strong { color: #1a252f; }
 
