--- a/theory.html
+++ b/theory.html
@@ -99,7 +99,12 @@
   <img src="treee.png" class="tree-right" alt="Green Mitigation Tree">
 
   <header class="site-header">
-    <div class="container">
+    <div class="container header-layout">
+
+      <div class="logo-box">
+        <img src="logo.png" alt="CO2 Logo" class="header-logo">
+      </div>
+      
       <div class="brand-title">
         <h1 style="color: white;">Sustainable Energy & Urban Green Mitigation</h1>
         <p style="color: white; opacity: 0.9;">Developed by Engr. Azhan Ahmed</p>
