--- a/calculator.html
+++ b/calculator.html
@@ -134,7 +134,7 @@
   </main>
 
   <footer class="site-footer">
-    <div class="container">Department of Civil Engineering • NED University</div>
+    <div class="container">Department of Civil Engineering • NED University of Engineering and Technology • Project by Group (Engr Azhan Ahmed & team)</div>
   </footer>
 
   <script src="common.js"></script>
@@ -144,6 +144,7 @@
 </html>
       
         
+
 
 
 
