--- a/about.html
+++ b/about.html
@@ -225,7 +225,7 @@
   </main>
 
   <footer class="site-footer" style="background: rgba(0,0,0,0.8); margin-top: 50px;">
-    <div class="container">Prepared for EN–404 • NED University</div>
+    <div class="container">Prepared for EN–404 • Department of Civil Engineering • NED University of Engineering and Technology • Project by Group (Engr Azhan Ahmed & team)</div>
   </footer>
 
   <script src="common.js"></script>
