--- a/insights.html
+++ b/insights.html
@@ -165,4 +165,34 @@
             letter-spacing: 1px;
         }
 
-        .content-card h3 {
+        .content-card h3 { color: #1a5e38; font-size: 1.7rem; margin-top: 0; }
+        
+        .highlight-card { border-top: 8px solid #27ae60; }
+        .accent-card { border-bottom: 8px solid #27ae60; }
+        
+        .feature-strip { 
+            background: #1a5e38; 
+            color: #fff; 
+            padding: 80px; 
+            border-radius: 40px; 
+            box-shadow: 0 20px 50px rgba(26, 94, 56, 0.2);
+            text-align: center;
+        }
+
+        .feature-content h2 { color: #fff; font-size: 2.5rem; margin-bottom: 20px; }
+        .feature-content p { font-size: 1.2rem; opacity: 0.9; }
+
+        .final-cta { 
+            background: #fff; 
+            text-align: center; 
+            border: 2px solid #27ae60;
+        }
+
+        @media (max-width: 1100px) {
+            .mosaic-grid { grid-template-columns: 1fr; }
+            .full-width { grid-column: span 1; }
+            .push-right { margin-top: 0; }
+        }
+    </style>
+</body>
+</html>
